@@ -1,19 +1,23 @@
 #!/bin/bash
 
 SCRIPT=$(basename $0)
-OPTIONS=":hf:c:d:m:a:n:t:p:e:i:Io:DgG:"
+OPTIONS=":hf:c:d:m:a:n:t:p:e:i:Ib:o:DgG:"
 PROJECT_NAME="real-time-search"
 GRADLE=./gradlew
 BUILD_DIR=build
 DEFAULT_DIR="unknown"
 RESULTS_TOP_DIR="results"
 DIR=$RESULTS_TOP_DIR
-BIN="$BUILD_DIR/install/$PROJECT_NAME/bin"
+INSTALL_DIR="$BUILD_DIR/install/$PROJECT_NAME"
+BIN="$INSTALL_DIR/bin"
+JAR="$INSTALL_DIR/lib/$PROJECT_NAME*.jar"
 RUN_SCRIPT="$BIN/$PROJECT_NAME"
 NUM_RUNS=1
 RUN_NUM=0
 OUT_EXT=.json
 IGNORE_ERR=false
+IBM_PATH=/opt/ibm/java-x86_64-80/bin/java
+IBM_ARGS="-Xgc:targetPauseTime=20 -Xverbosegclog -Xgc:nosynchronousGCOnOOM -verbose:gc -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+PrintGCTimeStamps -Xmx8g -Xgcpolicy:metronome -Dorg.slf4j.simpleLogger.defaultLogLevel=trace"
 
 usage() {
 # lim:  XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -24,6 +28,7 @@ usage() {
   echo "  o <file>           specify an output file name"
   echo "  i <name>           specify an instance name for the configuration"
   echo "  I                  ignore errors in results when performing multiple runs"
+  echo "  b <path>           provide path to IBM jdk; default $IBM_PATH"
   echo "  n <num>            specify the number of experiment runs"
   echo "file options: (overwrite separate options)"
   echo "  f <file>           specify configuration file"
@@ -37,8 +42,11 @@ usage() {
   echo "  e <key(type)=val>  specify key/value pair for extra parameters"
   echo "distribution options:"
   echo "  D                  run the experiments via installed distribution"
-  echo "  g                  run experiments using 'gradle run'"
-  echo "  G <args>           run experiments using 'gradle run' with custom arguments"
+  echo "  g                  install the dist with gradle before running"
+  echo "  G <args>           install the dist with gradle before running with parameters"
+  echo "Default running will be done with 'gradle run' unless -D parameter is given in "
+  echo "  which case the installed jar will be used from 'gradle installDist'.  The IBM "
+  echo "  JDK will be used if found; otherwise default JDK."
   echo "Results will be placed in separate files with the following directory structure:"
   echo "  results/algorithm/domain/params/[instance]/out"
   echo "If a parameter is not given then the directory name will be '$DEFAULT_DIR'."
@@ -46,6 +54,10 @@ usage() {
   echo "  where XX is a unique digit and YY is the run number of that set of runs."
 }
 
+# Makes the given directory.  Uses 'mkdir -p' so multiple directories may be 
+# created in a single call.  Formats the given directory such that it replaces 
+# any invalid characters with '_' (underscore).
+# arg1: the directory path to create
 add_dir() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -59,6 +71,10 @@ add_dir() {
   fi
 }
 
+# Adds an argument to EXPERIMENT_ARGS.  Handles the format of the arguments 
+# based on whether the experiment will be run through gradle or not.
+# arg1: the argument switch
+# arg2: the argument value
 add_arg() {
   if [ -z "$1" ] || [ -z "$2" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -72,6 +88,8 @@ add_arg() {
   fi
 }
 
+# Format the provided number into '_XY' format where X is a leading 0 if Y < 10.
+# arg1: the number to format
 get_file_num() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -85,6 +103,10 @@ get_file_num() {
   fi
 }
 
+# Returns a unique filename within the provided path by appending numbers in 
+# the form '_XX'.  Checks for uniqueness with the OUT_EXT file extension 
+# appended to the end of the filename.
+# arg1: the path and initial filename
 get_unique_filename() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -100,27 +122,34 @@ get_unique_filename() {
   fi
 }
 
-# results/algorithm/domain/params/instance/out
+# Parses a configuration file and sets up the directory structure based on the 
+# results in the form:
+# results/algorithm/domain/params
+# arg1: the configuration file
 get_dirs_from_config() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
     exit 1
   else
-    CONFIG=$(echo $CONFIG | sed -re 's/\\/\\\\/g')
+    PCONFIG=$(echo $1 | sed -re 's/\\/\\\\/g')
 SUB_DIRS=$(python <(cat <<EOF
 import json
-config = json.loads('$CONFIG')
+config = json.loads('$PCONFIG')
 algorithm = config['algorithmName']
 domain = config['domainName']
 termType = config['terminationCheckerType']
 termParam = config['terminationCheckerParameter']
-print algorithm, '/', domain, '/', termType, '-', termParam
+print algorithm + "/" + domain + "/" + termType + "-" + str(termParam)
 EOF
 ))
     add_dir "$SUB_DIRS"
   fi
 }
 
+# Checks a result file for error.  Prints a message if the result file cannot 
+# be found, cannot be parsed, or contains a non-empty 'errorMessage' value and 
+# also terminates if IGNORE_ERR is set ot false.
+# arg1: the result file
 check_error() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -147,6 +176,9 @@ EOF
   fi
 }
 
+# Run an experiment configuration using the gradle run target and specifying 
+# the app arguments with the special -PappArgs parameter added to build.gradle.
+# arg1: output file
 run_gradle() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -156,15 +188,25 @@ run_gradle() {
   fi
 }
 
-run_dest() {
+# Run an experiment configuration using the jar file produced by running the 
+# installDist gradle target.
+# arg1: output file
+run_dist() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
     exit 1
   else
-    eval $RUN_SCRIPT $(add_arg "-o" "$1")
+    if [ "$USE_IBM" = true ]; then
+      eval $IBM_PATH $IBM_ARGS -jar $JAR $(add_arg "-o" "$1")
+    else
+      eval $RUN_SCRIPT $(add_arg "-o" "$1")
+    fi
   fi
 }
 
+# Run a set of experiments.  Executes configuration NUM_RUNS times and stores 
+# results for each in a different file.
+# arg1: either run_dist or run_gradle to select run method
 run() {
   if [ -z "$1" ]; then
     >&2 echo "Internal script error: missing parameter to $FUNCNAME"
@@ -179,7 +221,9 @@ run() {
       for ((i=0; i < $NUM_RUNS; i++)); do
         RUN_NUM=$i
         NEW_OUT="$OUT_FILE$(get_file_num $i)$OUT_EXT"
+        echo "Starting run #$RUN_NUM of $NUM_RUNS..."
         $EXP_SCRIPT "$NEW_OUT"
+        echo "Finished run #$RUN_NUM of $NUM_RUNS. Results output to: $NEW_OUT"
         check_error "$NEW_OUT"
       done
     fi
@@ -231,6 +275,9 @@ while getopts $OPTIONS arg; do
     I)
       IGNORE_ERR=true
       ;;
+    b)
+      IBM_PATH=$OPTARG
+      ;;
     o)
       OUT_FILE=$OPTARG
       ;;
@@ -268,15 +315,24 @@ if [ -z "$OUT_FILE" ]; then
   OUT_FILE="out"
 fi
 
+#TODO change to allow overriding config file with arguments
+# Process config from file or separate run parameters
 if [ -n "$FILE_CONFIG" ]; then
   EXPERIMENT_ARGS=""
   if [ -f "$FILE_CONFIG" ]; then
     CONFIG="$(cat $FILE_CONFIG)"
+    get_dirs_from_config "$CONFIG"
+    EXPERIMENT_ARGS=$(add_arg "-f" "$FILE_CONFIG")
   else
     CONFIG="$FILE_CONFIG"
+    get_dirs_from_config "$CONFIG"
+
+    # Fix escapes for passing to application
+    CONFIG=$(echo $CONFIG | sed -re 's/(\\n)/ /g')
+    CONFIG=$(echo $CONFIG | sed -re 's/\\"/\\\\"/g')
+    CONFIG=$(echo $CONFIG | sed -re 's/"/\\"/g')
+    EXPERIMENT_ARGS=$(add_arg "-c" "$CONFIG")
   fi
-  get_dirs_from_config "$CONFIG"
-  EXPERIMENT_ARGS=$(add_arg "-c" "$CONFIG")
 else
   # Translate to experiment expected args and build directory structure
   if [ -n "$ALG" ]; then
@@ -304,26 +360,37 @@ else
   add_dir "$PARAM_DIR"
 fi
 
+# Instance name separate from configuration
 if [ -n "$INSTANCE_NAME" ]; then
   add_dir "$INSTANCE_NAME"
+fi
+
+# Detect if the IBM path exists
+if [ ! -f "$IBM_PATH" ]; then
+  >&2 echo "Could not find IBM JDK at '$IBM_PATH'; using default JDK:"
+  which java
+else
+  USE_IBM=true
 fi
 
 # Setup out file
 OUT_FILE=$(get_unique_filename "$DIR/$OUT_FILE")
 
+# Run it
 if [ -n "$DIST" ] && [ "$DIST" = true ]; then
-  # Run it
   if [ -n "$RUN_GRADLE" ] && [ "$RUN_GRADLE" = true ]; then
+    echo "Running gradle with parameters '$GRADLE_PARAMS'..."
     $GRADLE installDist $GRADLE_PARAMS
+    echo "Gradle finished"
   fi
 
-  if [ ! -d "$BIN" ]; then
-    >&2 echo "'$BIN' directory does not exist; build first or run with gradle"
+  if [ ! -d "$INSTALL_DIR" ]; then
+    >&2 echo "'$INSTALL_DIR' directory does not exist; build first or run with gradle"
     usage
     exit 1
   fi
 
-  run run_dest
+  run run_dist
 else
   run run_gradle
 fi
